# Repozitor

./: app_db.db  db.py  index.html  index2.html  main.py  pyproject.toml  utils.py
app/static/: about.html  index.html  me.html  otherpg.html  reg.html  vhod.html  zak.html
