[project]
name = "repozitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "app>=0.0.1",
    "asyncio>=3.4.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "unicorn>=2.1.3",
    "uvicorn>=0.34.3",
]
